Readme updated, contact cards small screens wrap fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -191,6 +191,7 @@ table {
 
 .soc-icon {
   cursor: pointer;
+  margin-bottom: 10px;
 }
 
 p, h2, h3, ul, li, input, textarea, button {
@@ -510,8 +511,9 @@ p.accent-p {
 }
 
 .contact-card {
-  padding: 40px;
-  flex: 1 1 50%;
+  padding: 40px 20px;
+  flex: 0 0 50%;
+  max-width: 50%;
 }
 .contact-card:first-of-type {
   background-color: rgb(44, 221, 152);
@@ -547,6 +549,13 @@ p.accent-p {
 .contact-card p {
   margin-bottom: 10px;
   line-height: 30px;
+}
+
+.icon-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .map-wrapper {
@@ -612,11 +621,6 @@ button:hover {
     align-items: center;
     flex-direction: column;
     justify-content: center;
-  }
-}
-@media only screen and (max-width: 520px) {
-  .contact-cards {
-    flex-direction: column;
   }
 }
 footer {
