--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -43,4 +43,5 @@
 }
 .soc-icon {
   cursor: pointer;
+  margin-bottom: 10px;
 }
